...
    <string name="poem_themes_folder_name" translatable="false">poemThemes</string>
    <string name="thumbnails_folder_name" translatable="false">thumbnails</string>
    <string name="background_image_drawable_folder" translatable="false">background</string>
    <string name="my_images_folder_name" translatable="false">myImages</string>

...
    <string name="app_nickname_pref" translatable="false">appNickname</string>

    <string name="create_poem">Create Poem</string>
    <string name="my_poem">My Poems</string>
    <string name="personalisation">Personalisation</string>
...
    <string name="poem_author">Author</string>
    <string name="start_writing">Start Writing Here</string>
    <string name="outline">Outline</string>
    <string name="background">Background</string>
    <string name="text">Text</string>
    <string name="rounded_rectangle_outline_description">ROUNDED_RECTANGLE</string>
    <string name="teardrop_description_outline">TEARDROP</string>
...
    <string name="rectangle_outline_description">RECTANGLE</string>
    <string name="lemon_outline_description">LEMON</string>
    <string name="colors">Colors</string>
    <string name="color_palette">Color Palette</string>
    <string name="image">Image</string>
    <string name="left_text_align">Left align image</string>
    <string name="center_text_align">Center Text Image</string>
    <string name="right_align_text">Right Align Text</string>
    <string name="text_color">Text Color</string>
...
    <string name="builder_message">The selected file name is already stored in the local
        application folder</string>
    <string name="builder_understood">Understood</string>
    <string name="builder_title">File already exists</string>
    <string name="preview_text">This is line 1\nThis is line 2\nThis is line 3</string>
    <string name="permission_request">Permission Request</string>
    <string name="permission_request_message">This permission is used to copy image files that you
...
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_new_image">Add New Image</string>
    <string name="color_picker_title">Select Color</string>
    <string name="remove_background_color_outline_popup">Would you like to remove the outline or the background color</string>
    <string name="remove_background_image_outline_popup">Would you like to remove the outline or the image</string>
    <string name="remove_background_title">Remove Background Element</string>
    <string name="positive_background_color_outline_button">Outline</string>
    <string name="negative_background_color_outline_button">Color</string>
    <string name="negative_background_image_outline_button">Image</string>
    <string name="create_poem_title">Give Your Poem A Title :)</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Retry</string>
    <string name="invalid_input">Invalid input</string>
    <string name="invalid_input_message">You have entered a name which does not contain letters
    and or numbers. Please enter a valid name.</string>
    <string name="invalid_input_message_extended">Failed to created a new Album. Check that your input is valid
...
    <string name="enter_poem_text">Enter Poem Text</string>
    <string name="guide_title">Guide</string>
    <string name="guide_outline">At the bottom you will see pre-made outlines. These outlines
        encompass either an image or a color. By default it encompasses a white color.
        You can change the outlines color by long pressing the desired outline. When you select
    an outline a preview will be displayed at the top of the page. Long pressing the preview removes
    the currently displayed theme</string>
    <string name="guide_background">You can either select a background color or a
        background image. The images that will be shown are the images you have added to the
        application. In order to add images kindly navigate to the main page and click my images.
        At the bottom right there will be a button you can press. Once again when you click an image
        or select a color it will be displayed on the top view</string>
    <string name="guide_text">At the bottom you will see text options. You can choose different fonts.
    You can change the color of the text and the size of the text. All clicks will be registered in the preview</string>
    <string name="guide_create_poem">At the top you will see your poem title. Long press the title of your poem
...
    <string name="title_change">Change Title</string>
    <string name="title_change_confirm">Confirm change</string>
    <string name="title_change_cancel">Cancel</string>
    <string name="search_exact_phrase">Search exact phrase</string>
    <string name="simple_file_name_search">Simple File Name Search</string>
...
