...
            return
        }

        val width = pdfDocument?.pageWidth ?: 0
        val height = pdfDocument?.pageHeight ?: 0
        val imageView = currentPage.getChildAt(0) as ShapeableImageView
        val tag: String = if (imageView.tag != null)
            imageView.tag as String
        else
            ""
        val startAndEndMargins =
            (poemTheme.textMarginUtil.marginLeft) + (poemTheme.textMarginUtil.marginRight)
        val topAndBottomMargins =
...
